--- a/terms.html
+++ b/terms.html
@@ -476,8 +476,8 @@
                              <li><a href="#">Our Services</a></li>
                              <li><a href="#">Our Experts</a></li>
                              <li><a href="#">Get Constultation</a></li>
-                             <li><a href="#">Terms & Condition</a></li>
-                             <li><a href="#">Privacy policy</a></li>
+                             <li><a href="terms.html">Terms & Condition</a></li>
+                             <li><a href="privacy.html">Privacy policy</a></li>
                          </ul>
                          <!-- Menu End -->
                      </div>
@@ -516,13 +516,13 @@
                      <div class="widget widget_social_icon">
                          <ul class="social_icon_list list-inline">
                              <li>
-                                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                 <a href="https://www.facebook.com/pages/category/Business-Service/Plancord-105811674151639/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                              </li>
                              <li>
-                                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                 <a href="https://twitter.com/Plancord1"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                              </li>
                              <li>
-                                 <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                 <a href="https://www.linkedin.com/company/plancord"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                              </li>
                              <li>
                                  <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
