--- a/index.html
+++ b/index.html
@@ -509,8 +509,8 @@
                 </div>
                 <div class="col-lg-5 video-area mt-50 mt-lg-0">
                     <img src="assets/img/section-bg/about-feature.png" data-rjs="2" alt="">
-                    <a href="https://www.youtube.com/watch?v=ctvlUvN6wSE" class="vdo-btn popup-video"><img
-                            src="assets/img/icons/play.svg" class="svg" alt=""> Watch Video</a>
+                    <!-- <a href="https://www.youtube.com/watch?v=ctvlUvN6wSE" class="vdo-btn popup-video"><img
+                            src="assets/img/icons/play.svg" class="svg" alt=""> Watch Video</a> -->
                 </div>
             </div>
         </div>
