--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                                     <p><a href="#">+353 87 677 0008</a></p>
                                 </div>
                                 <div class="single-info">
-                                    <span>Support mail</span>
+                                    <span>Email</span>
                                     <p>
                                         <a href="#">binu@plancord.com</a>
 
