added google analytics and text changes

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
     <!-- ======= Custom Stylesheet ======= -->
     <link rel="stylesheet" href="assets/css/custom.css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172978994-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-172978994-1');
+    </script>
+
+
 </head>
 
 <body>
@@ -190,12 +201,12 @@
                         <div class="col-lg-6">
                             <!-- Banner Content Begin -->
                             <div class="banner-content">
-                                <h1>Self rostering<br>
-                                    <span>app you can</span> <br>
-                                    ever use</h1>
+                                <h1>The Disruptive <br>
+                                    <span>Self Rostering</span> app
+                                    </h1>
                                 <p>Plancord Mobile App is an all-in-one solution that keeps employers
-                                    and staff and the advantageous side. Managers can create a group where all staff
-                                    enters their requested/preferred off days and work days in Plancord Mobile App.</p>
+                                    and staff on the advantageous side. Managers can create a group where all staff
+                                    enter their requested/preferred off days and work days in Plancord Mobile App.</p>
                                 <a href="#features" class="banner-btn btn"><span>Learn More</span></a>
                             </div>
                             <!-- Banner Content End -->
@@ -374,10 +385,7 @@
                             convince you
                             to use <br>
                             our application</h2>
-                        <p>We highest ye friends is exposed equally in. Ignorant had too strictly
-                            followed. Astonished
-                            as travelling assistance or
-                            unreserved oh pianoforte ye.</p>
+                        <p>Plancord’s intuitive software algorithm ensures manual shift rostering processes is obsolete.</p>
                     </div>
                     <!-- Section Title End -->
 
@@ -749,10 +757,7 @@
                             <!-- Widget Title End  -->
 
                             <div class="newsletter-content">
-                                <P>Cuteness you exquisite ourselves now end
-                                    forfeited. Enquire ye without it garrets himself. Interest our nor
-                                    received followed
-                                    was.</P>
+                                <P>We would like to hear more from you and understand your challenges in shift rostering. Pls follow us here:</P>
 
                                 <!-- <form
                                     action="https://themelooks.us13.list-manage.com/subscribe/post?u=79f0b132ec25ee223bb41835f&amp;id=f4e0e93d1d"
