--- a/privacy.html
+++ b/privacy.html
@@ -37,14 +37,14 @@
     <link rel="stylesheet" href="assets/css/custom.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-SV8M67CE6S"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172978994-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-SV8M67CE6S');
-</script>
+    gtag('config', 'UA-172978994-1');
+    </script>
 
 </head>
 
