--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
     <!-- Service End -->
 
     <!-- About Begin -->
-    <section class="pt-120 pb-60 section-pattern ov-hidden" data-bg-img="assets/img/section-pattern/about-pattern.png">
+    <section id="enterprise" class="pt-120 pb-60 section-pattern ov-hidden" data-bg-img="assets/img/section-pattern/about-pattern.png">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7">
@@ -736,10 +736,10 @@
 
                             <!-- Menu Begin -->
                             <ul class="menu">
-                                <li><a href="#">About Company</a></li>
-                                <li><a href="#">Our Services</a></li>
-                                <li><a href="#">Our Experts</a></li>
-                                <li><a href="#">Get Constultation</a></li>
+                                <li><a href="#about">About Company</a></li>
+                                <li><a href="#features">Our Services</a></li>
+                                <li><a href="#enterprise">Our Experts</a></li>
+                                <li><a href="#contact">Get Consultation</a></li>
                                 <li><a href="terms.html">Terms & Condition</a></li>
                                 <li><a href="privacy.html">Privacy policy</a></li>
                             </ul>
@@ -786,7 +786,7 @@
                                     <a href="https://www.linkedin.com/company/plancord"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                    <!-- <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a> -->
                                 </li>
                             </ul>
                         </div>
