--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
                     </div>
                     <div class="single-info">
                         <span>Business Phone</span>
-                        <p><a href="#">0035 387 2840 409</a></p>
+                        <p>+353 87 677 0008</p>
                     </div>
                     <div class="single-info">
-                        <span>Support mail</span>
+                        <span>Email</span>
                         <p>
-                            <a href="#">info@incareview.com</a>
+                            binu@plancord.com
 
                         </p>
                     </div>
@@ -688,12 +688,12 @@
                                 </div> -->
                                 <div class="single-info">
                                     <span>Business Phone</span>
-                                    <p><a href="#">+353 87 677 0008</a></p>
+                                    <p>+353 87 677 0008</p>
                                 </div>
                                 <div class="single-info">
                                     <span>Email</span>
                                     <p>
-                                        <a href="#">binu@plancord.com</a>
+                                        binu@plancord.com
 
                                     </p>
                                 </div>
