added link to app store and play store

--- a/index.html
+++ b/index.html
@@ -574,8 +574,8 @@
                         <h4>In short, if you’ve always wanted to strike a balance between your work life and
                             social life, you can’t miss this app.
                         </h4>
-                        <a href="#" class="btn btn-white"><span>Apple Store</span></a>
-                        <a href="#" class="btn btn-white"><span>Play Store</span></a>
+                        <a href="https://apps.apple.com/in/app/plancord/id1465562035" class="btn btn-white"><span>Apple Store</span></a>
+                        <a href="https://play.google.com/store/apps/details?id=com.infomaxis.plancord" class="btn btn-white"><span>Play Store</span></a>
                     </div>
                     <!-- CTA Content End -->
                 </div>
