phone form change

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                                         placeholder="Company Name">
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="tel" name="phone" class="theme-input-style"  placeholder="Phone">
+                                    <input type="tel" name="phone" class="theme-input-style"  pattern="[0-9]{7}-[0-9]{7}" placeholder="1234567-7654321">
                                 </div>
 
                                 <div class="col-12">
