form changes removed

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                             suggestion or complaint to make?<br>
                             We’re always available to assist you as soon as possible.</p>
 
-                        <form method="POST" action="sendmail.php" class="contact_form">
+                        <form method="POST" action="sendmail.php" class="contact-form">
                             <div class="row">
                                 <div class="col-md-6">
                                     <input type="text" name="name" class="theme-input-style" placeholder="Your Name"
