--- a/index.html
+++ b/index.html
@@ -824,7 +824,11 @@
     <!-- Back to Top End -->
 
     <!-- ======= jQuery Library ======= -->
-    <script src="assets/js/jquery.min.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+    <!-- <script src="assets/js/jquery.min.js"></script> -->
     <!-- <script
   src="https://code.jquery.com/jquery-3.5.1.js"
   integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
